--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,21 @@
         specimen book. It has survived not only five centuries, but also</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="dummy2">is simply dummy text of the printing and typesetting industr\n
+        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,\n\n\n
+        when an unknown printer took a galley of type and scrambled it to make a type
+        specimen book. It has survived not only five centuries, but also standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type
+        specimen book. It has survived not only five centuries, but alsos simply dummy text of the printing and typesetting industr
+        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type
+        specimen book. It has survived not only five centuries, but also standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type\n\n
+        specimen book. It has survived not only five centuries,s simply dummy text of the printing and typesetting industr
+        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type
+        specimen book. It has survived not only five centuries, but also standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type
+        specimen book. It has survived not only five centuries,</string>
 </resources>
